--- a/main.html
+++ b/main.html
@@ -8,17 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<p><b>What is the captial of India?</b></p>
-	
-	<input type="radio" id="newDelhi" value="New Delhi" />
-	<label for="newDelhi">New Delhi</label>
-	
-	<input type="radio" id="mumbai" value=Mumbai" />
-	<label for="mumbai">Mumbai</label>
+	<p><b>What is the capital of India?</b></p>
 
-	<blockquote cite="" style="max-width: 600px; margin: 10px; padding: 15px; border-left-style: solid; border-left-width: 8px; border-left-color: green; background-color: #f8fffe; font-weight: bold;">
-		New Delhi is the capital of India and an administrative district of NCT Delhi.
-	</blockquote>
+  
+  <input type="radio" id="newDelhi" name="capital" value="New Delhi" />
+  <label for="newDelhi">New Delhi</label><br>
+  
+  <input type="radio" id="mumbai" name="capital" value="Mumbai" />
+  <label for="mumbai">Mumbai</label>
+
+  <!-- Quotation block -->
+  <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi" 
+    style="max-width: 600px; margin: 10px; padding: 15px; 
+           border-left: 8px solid green; background-color: #f8fffe; font-weight: bold;">
+    New Delhi is the capital of India and an administrative district of NCT Delhi.
+  </blockquote>
 	
     <script type="text/javascript" src="./script.js">
 </script>
